--- a/artisr/templates/artisr/results.html
+++ b/artisr/templates/artisr/results.html
@@ -27,13 +27,13 @@
         </tr>
       </thead>
       <tbody>
-        {% for song in musician.album_set.all|dictsort:'num_stars' %}
+        {% for song in Musician.Album_set.all|dictsort:'num_stars' %}
         <tr>
           <td>{{ song.name }}</td>
           <td>{{ song.num_stars }}</td>
           <td>{{ song.release_date }}</td>
           <td><a href="{% url 'artisr:delete_song' song.id %}">Delete</a>
-            <a href="{% url 'artisr:song_detail' song.id %}">Chi tiết</a></td>
+            <a href="{% url 'artisr:detail_infor' song.id %}">Chi tiết</a></td>
         </tr>
         {% endfor %}
       </tbody>
