--- a/artisr/templates/artisr/detail_infor.html
+++ b/artisr/templates/artisr/detail_infor.html
@@ -29,7 +29,7 @@
 </html>
 
 
-{% comment %}
+<!-- {% comment %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -91,4 +91,4 @@
     <p><a href="{% url 'artisr:results' song.artist_id %}">Quay lại danh sách bài hát</a></p>
 </body>
 </html>
-{% endcomment %}
+{% endcomment %} -->
