--- a/artisr/templates/artisr/results.html
+++ b/artisr/templates/artisr/results.html
@@ -27,7 +27,7 @@
         </tr>
       </thead>
       <tbody>
-        {% for song in Musician.Album_set.all|dictsort:'num_stars' %}
+        {% for song in musician.album_set.all|dictsort:'num_stars' %}
         <tr>
           <td>{{ song.name }}</td>
           <td>{{ song.num_stars }}</td>
